# Termy

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_ZH.md  esbuild.config.mjs  eslint.config.js  eslint.obsidian.config.js  main.css  manifest.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  tsconfig.test.json  versions.json  wrangler.jsonc
.github/workflows/: README.md  build-rust.yml  ci.yml  release.yml
rust-servers/: Cargo.toml
rust-servers/src/: context_snapshot.rs  main.rs  mcp_stdio_server.rs  router.rs  server.rs
rust-servers/src/pty/: mod.rs  osc_scanner.rs  session.rs  shell.rs
scripts/: build-rust.js  install-dev-reload.js  install-dev-reload.test.js  install-dev.js  package-plugin.js  release-notes.js  release-notes.test.js  upload-r2-assets.js  upload-r2-assets.test.js  verify-build.js
src/: main.ts
src/i18n/: i18nService.ts  index.ts  types.ts
src/i18n/locales/: en.ts  ja.ts  ko.ts  ru.ts  zh-CN.ts
src/services/: devPluginReloader.ts
src/services/agent/: agentProvider.ts  importedAgentThreadHistoryService.test.ts  importedAgentThreadHistoryService.ts  panelContextEncoder.test.ts  panelContextEncoder.ts
src/services/agentStream/: acpAgentInstallRegistry.test.ts  acpAgentInstallRegistry.ts  agentConfig.test.ts  agentConfig.ts  (+20 more)
src/settings/: agentSettingsRows.ts  index.ts  settings.test.ts  settings.ts  settingsAccessor.ts  settingsDefaults.test.ts  settingsDefaults.ts  settingsTab.ts  types.ts
src/types/: electron.d.ts  ws.d.ts
src/utils/: changelog.test.ts  changelog.ts  logger.ts  platform.test.ts  platform.ts
(+117 files in other folders)
