# Rust Terminal Server
[package]
name = "terminal-server"
version = "1.0.0"
edition = "2021"
description = "Terminal server for obsidian-terminal plugin"

[[bin]]
name = "terminal-server"
path = "src/main.rs"

[dependencies]
# PTY 支持
portable-pty = "0.9"

# 异步运行时
tokio = { version = "1", features = ["rt", "net", "sync", "signal", "macros", "time"] }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "2.0"

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# 共享的 release profile 配置
[profile.release]
opt-level = 3       # 优化速度而非大小
lto = "thin"        # 使用 thin LTO，平衡编译速度和运行时性能
codegen-units = 1   # 更好的优化
strip = true        # 移除符号表
panic = "abort"     # 减少二进制大小
